Prettify multiline code

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -149,8 +149,7 @@ $client = (new Client())
 client = (Client()
     .set_endpoint('https://[HOSTNAME_OR_IP]/v1') # Your API Endpoint
     .set_project('5df5acd0d48c2')                # Your project ID
-    .set_key('919c2db5d4...a2a3346ad2')          # Your secret API key
-)
+    .set_key('919c2db5d4...a2a3346ad2'))          # Your secret API key
 </code></pre>
         </div>
     </li>
@@ -565,8 +564,7 @@ from appwrite.services.users import Users
 client = (Client()
   .set_endpoint('https://[HOSTNAME_OR_IP]/v1') # Your API Endpoint
   .set_project('5df5acd0d48c2')                # Your project ID
-  .set_key('919c2db5d4...a2a3346ad2')          # Your secret API key
-)
+  .set_key('919c2db5d4...a2a3346ad2'))          # Your secret API key
 
 users = Users(client)
 
