--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -377,6 +377,7 @@ let client = Client()
 <h2><a href="/docs/getting-started-for-server#makeRequest" id="makeRequest">Make Your First Request</a></h2>
 
 <p>After your SDK configuration is set, create any of the Appwrite service objects and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
+<p>Note: To improve readability, we don't display the required imports in this example.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -416,10 +417,7 @@ $user = $users->create(
     <li>
         <h3>Python</h3>
         <div class="ide margin-top-small" data-lang="python" data-lang-label="Python SDK">
-            <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.id import ID
-from appwrite.services.users import Users
-
-users = Users(client)
+            <pre class="line-numbers"><code class="prism language-python" data-prism>users = Users(client)
 
 user = users.create(
     user_id=ID.unique(),
