--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -382,7 +382,9 @@ let client = Client()
     <li>
         <h3>Node.js</h3>
         <div class="ide margin-top-small" data-lang="nodejs" data-lang-label="Node.js SDK">
-            <pre class="line-numbers"><code class="prism language-javascript" data-prism>const users = new Users(client);
+            <pre class="line-numbers"><code class="prism language-javascript" data-prism>const { Client, ID, Users } = require('node-appwrite');
+
+const users = new Users(client);
 
 let promise = users.create(
     ID.unique(),
@@ -402,7 +404,11 @@ promise.then(function (response) {
         <h3>PHP</h3>
 
         <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP SDK">
-            <pre class="line-numbers"><code class="prism language-php" data-prism>$users = new Users($client);
+            <pre class="line-numbers"><code class="prism language-php" data-prism>use Appwrite\Client;
+use Appwrite\ID;
+use Appwrite\Services\Users;
+                
+$users = new Users($client);
 
 $user = $users->create(
     userId: ID::unique(),
@@ -416,7 +422,11 @@ $user = $users->create(
     <li>
         <h3>Python</h3>
         <div class="ide margin-top-small" data-lang="python" data-lang-label="Python SDK">
-            <pre class="line-numbers"><code class="prism language-python" data-prism>users = Users(client)
+            <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.client import Client
+from appwrite.id import ID
+from appwrite.services.users import Users
+
+users = Users(client)
 
 user = users.create(
     user_id=ID.unique(),
@@ -429,7 +439,9 @@ user = users.create(
     <li>
         <h3>Ruby</h3>
         <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby SDK">
-            <pre class="line-numbers"><code class="prism language-ruby" data-prism>users = Appwrite::Users.new(client)
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>require 'appwrite'
+
+users = Appwrite::Users.new(client)
 
 user = users.create(
     userId: ID.unique(),
@@ -442,7 +454,9 @@ user = users.create(
     <li>
         <h3>Deno</h3>
         <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno SDK">
-            <pre class="line-numbers"><code class="prism language-typescript" data-prism>const users = new Users(client);
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>import { Client, ID, Users } from "https://deno.land/x/appwrite/mod.ts";
+                
+const users = new Users(client);
 
 let promise = users.create(
     ID.unique(),
@@ -461,7 +475,9 @@ promise.then(function (response) {
     <li>
         <h3>Dart</h3>
         <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
-            <pre class="line-numbers"><code class="prism language-dart" data-prism>final users = Users(client);
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:dart_appwrite/dart_appwrite.dart';
+
+final users = Users(client);
 
 final user = await users.create(
     userId: ID.unique(),
@@ -474,7 +490,11 @@ final user = await users.create(
     <li>
         <h3>Kotlin</h3>
         <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val users = Users(client)
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
+import io.appwrite.ID
+import io.appwrite.services.Users
+
+val users = Users(client)
 
 val user = users.create(
     userId = ID.unique(),
@@ -487,7 +507,10 @@ val user = users.create(
     <li>
         <h3>Swift</h3>
         <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift SDK">
-            <pre class="line-numbers"><code class="prism language-swift" data-prism>let users = Users(client)
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+import AppwriteModels
+                
+let users = Users(client)
 
 let user = try await users.create(
     userId: ID.unique(),
