fixed slangs and unnecesseory words

--- a/app/views/docs/architecture.phtml
+++ b/app/views/docs/architecture.phtml
@@ -41,21 +41,21 @@ $image = new View(__DIR__.'/../general/image.phtml');
 
 <h2>ClamAV</h2>
  
-<p>ClamAV is a TCP Anti-virus server responsible for scanning all user uploads to the Appwrite storage. The ClamAV micro service is optional and can be disabled using Appwrite environment variables.</p>
+<p>ClamAV is a TCP Anti-virus server responsible for scanning all user uploads to the Appwrite storage. The ClamAV microservice is optional and can be disabled using Appwrite environment variables.</p>
 
 <h2>Maintenance</h2>
 
-<p>The Maintenance microservice is responsible to delegate maintenance jobs for different workers at specific time intervals that can be customized using Appwrite environment variables. The different tasks include deletion of old logs, and cleaning of irrelevant abuse records.</p>
+<p>The Maintenance microservice is responsible to delegate maintenance jobs to different workers at specific time intervals that can be customized using Appwrite environment variables. The different tasks include the deletion of old logs and the cleaning of irrelevant abuse records.</p>
 
 <h2>Schedule</h2>
 
-<p>The Schedule microservice is responsible for delegating future tasks to the workers and set recurring tasks and cloud function executions.</p>
+<p>The Schedule microservice is responsible for delegating future tasks to the workers and setting recurring tasks and cloud function executions.</p>
 
 <h2>Workers</h2>
 
 <p><b>Functions</b></p>
 
-<p>The Functions worker is responsible for executing your Appwrite cloud functions in an isolated runtime environment. The service leverages Docker for creating running environment in multiple supported coding languages.</p>
+<p>The Functions worker is responsible for executing your Appwrite cloud functions in an isolated runtime environment. The service leverages Docker for creating a running environment in multiple supported coding languages.</p>
 
 <p><b>Audits</b></p>
 
