--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -60,7 +60,7 @@ $cols = [
                     <li><a href="/docs/client/teams<?php echo $this->escape($clientSDK); ?>">Teams</a></li>
                     <li><a href="/docs/client/databases<?php echo $this->escape($clientSDK); ?>">Databases</a></li>
                     <li><a href="/docs/client/storage<?php echo $this->escape($clientSDK); ?>">Storage</a></li>
-                    <li><a href="/docs/client/functions<?php echo $this->escape($serverSDK); ?>">Functions</a></li>
+                    <li><a href="/docs/client/functions<?php echo $this->escape($clientSDK); ?>">Functions</a></li>
                     <li><a href="/docs/client/locale<?php echo $this->escape($clientSDK); ?>">Localization</a></li>
                     <li><a href="/docs/client/avatars<?php echo $this->escape($clientSDK); ?>">Avatars</a></li>
                     <li><a href="/docs/server/health<?php echo $this->escape($serverSDK); ?>">Health</a></li>
