--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -94,6 +94,12 @@
         </tr>
 
         <tr>
+            <td data-title="Code: ">505</td>
+            <td data-title="Text: ">HTTP Version Not Supported</td>
+            <td data-title="Description: ">The HTTP version used in the request is not supported by the Appwrite servers.</td>
+        </tr>
+
+        <tr>
             <td data-title="Code: ">511</td>
             <td data-title="Text: ">Network Authentication Required</td>
             <td data-title="Description: ">Indicates that the client needs to authenticate to gain network access.</td>
