Fix Grammatical Errors in Documentation

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -1,8 +1,8 @@
-<p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local desktop or cloud provider of your choice.</p>
+<p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local desktop or the cloud provider of your choice.</p>
 
 <h2><a href="/docs/installation#systemRequirements" id="systemRequirements">System Requirements</a></h2>
 
-<p>Appwrite was designed to run well on both small and large deployment. The minimum requirements to run Appwrite is as little as <b>1 CPU core</b> and <b>2GB of RAM</b>, and an operating system that supports Docker.</p>
+<p>Appwrite was designed to run well on both small and large deployments. The minimum requirements to run Appwrite are as little as <b>1 CPU core</b> and <b>2GB of RAM</b>, and an operating system that supports Docker.</p>
 
 <p>Appwrite requires <a href="https://docs.docker.com/compose/install/" target="_blank" rel="noopener">Docker Compose Version 2</a>. To install Appwrite, make sure your Docker installation is updated to support Composer V2.</p>
 
@@ -27,7 +27,7 @@
 
 <h3><a href="/docs/installation#windows" id="windows">Windows</a></h3>
 
-<p>Hyper-V and Containers Windows features must be enabled to run Appwrite on Windows with Docker. If you don't have these features available, you can install <a href="https://docs.docker.com/desktop/windows/install/" target="_blank" rel="noopener">Docker Desktop</a> that uses Virtualbox to run Appwrite on a Virtual Machine.</p>
+<p>Hyper-V and Containers Windows features must be enabled to run Appwrite on Windows with Docker. If you don't have these features available, you can install <a href="https://docs.docker.com/desktop/windows/install/" target="_blank" rel="noopener">Docker Desktop</a> which uses Virtualbox to run Appwrite on a Virtual Machine.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -84,7 +84,7 @@
             <td>
                 <a href="https://marketplace.digitalocean.com/apps/appwrite" target="_blank" rel="noopener">Click to Install</a>
             </td>
-        </tr>        
+        </tr>
         <tr>
             <td>
                 <img src="/images-ee/one-click/gitpod.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
