--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -2,7 +2,7 @@
 
 <h2><a href="/docs/graphql#requests" id="requests">Requests</a></h2>
 
-<p>GraphQL requests can be made in multiple ways, as every action executes through the same endpoint. However, all requests take a common structure.</p>
+<p>GraphQL requests can be made in multiple ways, as every action executes through the same endpoint. However, all requests have a common structure.</p>
 
 <table class="vertical full args">
     <thead>
@@ -39,7 +39,7 @@
             string
         </td>
         <td data-title="Description: ">
-            If the query contains several named operations, operationName controls which one to execute.
+            If the query contains several named operations, controls which one to execute.
         </td>
     </tr>
     <tr>
@@ -196,7 +196,7 @@
 
 <h2><a href="/docs/graphql#graphql-vs-rest" id="graphql-vs-rest">GraphQL vs REST</a></h2>
 
-<p>There are three main features that make GraphQL a great option when compared to the REST API: <b>selection sets</b>, <b>query batching and the databases integration.</b></p>
+<p>There are two main features that make GraphQL appealing when compared to the REST API: <b>selection sets</b> and <b>query batching.</b></p>
 
 <h3><a href="/docs/graphql#selection-sets" id="selection-sets">Selection Sets</a></h3>
 
